--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <a class="nav-link toggle" href="#">Menu</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link toggle">Menu</a>
+                    <a href="#" class="nav-link toggle">About</a>
                   </li>
 
                   <li class="nav-item">
@@ -313,7 +313,7 @@
               >
                 Eat Bold. Drink<span> Loud.</span> Live the <span>Blast.</span>
               </h1>
-              <p style="text-align: justify; color: #a7a7a7" data-aos="fade-up">
+              <p style="text-align: justify; color: #fffdfd" data-aos="fade-up">
                 A modern fusion kitchen & craft bar serving global flavors,
                 handcrafted pizzas, signature cocktails, and comfort food with a
                 twist.
@@ -711,7 +711,7 @@
     <!-- About-area end -->
 
     <!-- Product-area start -->
-    <section class="product-area product-2 pt-100 pb-75">
+    <section class="product-area product-2 pt-100 pb-75" style="display: none">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -1599,9 +1599,11 @@
                 <div class="product text-center p-30 radius-md mb-30">
                   <h3 class="product-title lc-1 mb-10">
                     <a href target="_self" title="Hot Spices Pizza"
-                      >Signature Burgers</a
-                    >
+                      >Signature Burgers
+                    </a>
                   </h3>
+                  <br />
+                  <br />
                   <!-- <div class="product-price mb-15">
                     <span class="h4 new-price color-primary">$10.00</span>
                     <span class="prev-price">$11.00</span>
